--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.2.1",
     "mongoose-delete": "^1.0.2",
+    "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0",
     "openai": "^4.38.2"
   }
