--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "voicenoteapp-backend",
+  "name": "refracto-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "bot": "node ./bot.service.js",
+    "dev": "concurrently \"npm run start\" \"npm run bot\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -21,5 +24,8 @@
     "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0",
     "openai": "^4.38.2"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
